--- a/src/content/blog/quantum-go-fish.mdx
+++ b/src/content/blog/quantum-go-fish.mdx
@@ -3,13 +3,18 @@ title: 'Quantum Go Fish'
 description: 'A complete information game about hoarding uncertainty'
 pubDate: 2011-10-18
 updatedDate: 2024-12-15
+heroImage: '/img/QGF.png'
 ---
+
+import QGFCard from '../../components/QGFCard.astro';
+import QGFHand from '../../components/QGFHand.astro';
 
 -   [How to play](#how-to-play)
     -   [How to win](#how-to-win)
     -   [How to lose](#how-to-lose)
 -   [A sample game](#a-sample-game)
 -   [A physical deck for the game](#a-physical-deck-for-the-game)
+    -   [The sample game revisited](#the-sample-game-revisited)
 
 (I originally posted this [on
 stacky.net](https://stacky.net/wiki/index.php?title=Main_Page).)
@@ -231,3 +236,77 @@ after A said he didn't have any 2's would have to be worked out
 logically. If a player works something out, she announces it to the
 other players, paperclips are attached, cards are turned over, and the
 game continues.
+
+## The sample game, revisited
+
+Let's walk through how the sample game would look with the physical deck. Each
+player starts with 4 paperclips not attached to anything:
+
+<QGFHand name="A" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={4} />
+<QGFHand name="B" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={4} />
+<QGFHand name="C" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={4} />
+
+When A asks "B, do you have any 1's?", we know that one of A's paperclips must
+be a 1, so it's attached to the 1 card:
+<QGFHand name="A" cards={{ '1': 1, '2': 0, '3': 0 }} paperclips={3} />
+<QGFHand name="B" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={4} />
+<QGFHand name="C" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={4} />
+
+When B answers "yes", and gives a 1 to A, that paperclip must be a 1:
+<QGFHand name="A" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={3} />
+<QGFHand name="B" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={3} />
+<QGFHand name="C" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={4} />
+
+When B asks "C, do you have any 1's?", we know that one of B's paperclips is a 1:
+<QGFHand name="A" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={3} />
+<QGFHand name="B" cards={{ '1': 1, '2': 0, '3': 0 }} paperclips={2} />
+<QGFHand name="C" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={4} />
+
+When C answers "yes", we have:
+<QGFHand name="A" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={3} />
+<QGFHand name="B" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={2} />
+<QGFHand name="C" cards={{ '1': 0, '2': 0, '3': 0 }} paperclips={3} />
+
+Except now all the 1's are accounted for, so C's paperclips cannot be 1's. C
+indicates this by turning over the 1 card:
+<QGFHand name="A" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={3} />
+<QGFHand name="B" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={2} />
+<QGFHand name="C" cards={{ '1': -1, '2': 0, '3': 0 }} paperclips={3} />
+
+After C asks "A, do you have any 2's?"
+<QGFHand name="A" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={3} />
+<QGFHand name="B" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={2} />
+<QGFHand name="C" cards={{ '1': -1, '2': 1, '3': 0 }} paperclips={2} />
+
+And after A answers "no":
+<QGFHand name="A" cards={{ '1': 2, '2': -1, '3': 0 }} paperclips={3} />
+<QGFHand name="B" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={2} />
+<QGFHand name="C" cards={{ '1': -1, '2': 1, '3': 0 }} paperclips={2} />
+
+Since all the 1's are accounted for, A's remaining paperclips _must_ be 3's:
+<QGFHand name="A" cards={{ '1': 2, '2': -1, '3': 3 }} paperclips={0} />
+<QGFHand name="B" cards={{ '1': 2, '2': 0, '3': 0 }} paperclips={2} />
+<QGFHand name="C" cards={{ '1': -1, '2': 1, '3': 0 }} paperclips={2} />
+
+Since there are only four 3's total and A has three of them, at least one of B's
+paperclips must be a 2. Similarly, at least one of C's paperclips must be a 2:
+<QGFHand name="A" cards={{ '1': 2, '2': -1, '3': 3 }} paperclips={0} />
+<QGFHand name="B" cards={{ '1': 2, '2': 1, '3': 0 }} paperclips={1} />
+<QGFHand name="C" cards={{ '1': -1, '2': 2, '3': 0 }} paperclips={1} />
+
+Finally, after A asks "C, do you have any 3's?" and C answers "no":
+<QGFHand name="A" cards={{ '1': 2, '2': -1, '3': 3 }} paperclips={0} />
+<QGFHand name="B" cards={{ '1': 2, '2': 1, '3': 0 }} paperclips={1} />
+<QGFHand name="C" cards={{ '1': -1, '2': 2, '3': -1 }} paperclips={1} />
+
+C's remaining paperclip must be a 2, since it can't be anything else:
+<QGFHand name="A" cards={{ '1': 2, '2': -1, '3': 3 }} paperclips={0} />
+<QGFHand name="B" cards={{ '1': 2, '2': 1, '3': 0 }} paperclips={1} />
+<QGFHand name="C" cards={{ '1': -1, '2': 3, '3': -1 }} paperclips={0} />
+
+And that means B's remaining paperclip can't be a 2, so it must be a 3:
+<QGFHand name="A" cards={{ '1': 2, '2': -1, '3': 3 }} paperclips={0} />
+<QGFHand name="B" cards={{ '1': 2, '2': 1, '3': 1 }} paperclips={0} />
+<QGFHand name="C" cards={{ '1': -1, '2': 3, '3': -1 }} paperclips={0} />
+
+Since all the hands are determined and it's the end of A's turn, A wins.
