Reorganize quantum go fish content into a single directory.

--- a/src/content/blog/quantum-go-fish/index.mdx
+++ b/src/content/blog/quantum-go-fish/index.mdx
@@ -3,11 +3,10 @@ title: 'Quantum Go Fish'
 description: 'A complete information game about hoarding uncertainty'
 pubDate: 2011-10-18
 updatedDate: 2024-12-15
-heroImage: '/img/QGF.png'
+heroImage: 'QGF.png'
 ---
 
-import QGFCard from '../../components/QGFCard.astro';
-import QGFHand from '../../components/QGFHand.astro';
+import QGFHand from 'QGFHand.astro';
 
 -   [How to play](#how-to-play)
     -   [How to win](#how-to-win)
